--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Arbala Security Mutiltool",
+  "name": "Arbala Security Multitool",
   "description": "Send IOCs from your browser directly to your Azure Sentinel Threat Intel Indicator table!",
   "version": "0.0.2.0",
   "permissions": ["*://graph.microsoft.com/*", "*://login.microsoftonline.com/*"],
