--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Arbala Security Multitool",
+  "name": "Arbala Security Multi-tool",
   "description": "Send IOCs from your browser directly to your Azure Sentinel Threat Intel Indicator table!",
-  "version": "0.0.2.0",
+  "version": "0.0.2.1",
   "permissions": ["*://graph.microsoft.com/*", "*://login.microsoftonline.com/*"],
   "icons": { "16": "icon16.png",
     "48": "icon48.png",
