--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,12 @@
   "manifest_version": 2,
   "name": "Arbala Security Multi-tool",
   "description": "Send IOCs from your browser directly to your Azure Sentinel Threat Intel Indicator table!",
-  "version": "0.0.2.1",
+  "version": "0.0.3.0",
   "permissions": ["*://graph.microsoft.com/*", "*://login.microsoftonline.com/*"],
   "icons": { "16": "icon16.png",
     "48": "icon48.png",
-   "128": "icon128.png" },
+    "128": "icon128.png"
+  },
   "options_page": "configuration.html",
   "browser_action": {
     "default_popup": "menu.html",
